--- a/index.html
+++ b/index.html
@@ -85,7 +85,62 @@ window.onload = function() {
 };
 </script></head><body>
 <div>Anatomy of a <em>Web Map</em></div>
+<div>By <a href="http://stamen.com/studio/alan">Alan McConchie</a> :) and <a href="http://stamen.com/studio/beth">Beth Schechter</a> :D</div>
+
+<div>What is a web map?</div>
+<div>A web map is...</div>
+<div>How is a <em>web map</em> different than a <em>digital map</em>?</div>
+<div>Digital: involves computer, but might not be accessible by the internet</div>
+<div>History: how did web maps come to be?</div>
+<div>Digital maps: ArcGIS</div>
+<div>Web GIS is not user friendly </div>
+<div>Also usually ugly</div>
+<div>Mapquest</div>
+<div>Problem: slow to load</div>
+<div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries</div>
+<div>Google Maps</div>
+<div>Google Maps really paved the way for online mapping, beginning in 2005</div>
+<div>Invention of the <em>tile</em></div>
+<div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
+<div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
+<div></div>
+<div>Side note: XKCD</div>
+<div></div>
+<div>Tiles: the base of a base map</div>
+<div>[copy and paste Lyzi slides about tiles through pt 2 talking about feature layers]</div>
+<div></div>
+<div>Content layers</div>
+<div>point, polygon, line</div>
+<div>interactivity: </div>
+<div>There’s a limit to how much data you can have in your  content layer, because it will take more time to load. Above a certain size, vectors actually become too much data to load at a certain speed.</div>
+<div>Content layers could also be made from transparent tiles</div>
+<div></div>
+<div>3 exceptions to the simplified story!</div>
+<div>Tiles are always rasters <em>EXCEPT</em> for vector tiles</div>
+<div>vector tiles: they are an alternative to a database that makes raster tiles. Still smush into PNG</div>
+<div>“what is difference b/t raster and vector tiles?” // put questions into the presentation.</div>
+<div>Raster: ask for data to fit into tile</div>
+<div>Vector: already have vector data sliced up in the way that I will make raster tiles</div>
+<div>So someone has to go through and chop up that data, like MapBox</div>
+<div>Can’t interact with features on a raster. BUT UTF Grid (mapbox invention).</div>
+<div><em>D3</em> does not exist in the world of tiles (BUT can’t make road map in D3) BUT can do things that are clumsy in slippy maps (chloropleth map)</div>
+<div></div>
+<div>Where do I start?</div>
+<div></div>
+<div>I want to make…</div>
+<div>// http://mapmeld.github.io/whichmapdoiuse/# </div>
+<div></div>
+<div>Do I need my own tiles?</div>
+<div>No:</div>
+<div></div>
+<div>Yes</div>
+<div>TileMill</div>
+<div></div>
+<div>Awesome tiles!</div>
+<div>* TileMill</div>
+
 <div>Thanks to:</div>
 <div><a href="https://github.com/lyzidiamond">Lyzi Diamond</a></div>
+<div><a href="http://stamen.com">Stamen</a></div>
 <div>Everyone at <a href="http://maptime.github.io">#maptime</a></div>
 <div>You!</div>
