--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@ window.onload = function() {
 </script></head><body>
 <div>Anatomy of a <em>Web Map</em></div>
 <div>By <a href="http://stamen.com/studio/alan">Alan McConchie</a> :) and <a href="http://stamen.com/studio/beth">Beth Schechter</a> :D</div>
-
+<div>Housekeeping!<br>You can follow along here: <a href="http://sta.mn/???">sta.mn/???</a></div>
+<div>[image: gray's anatomy? Anatomy of a single-celled organism?]</div>
+<div>[code: show the simplest possible leaflet map]</div>
 <div>What is a web map?</div>
 <div>A web map is...</div>
 <div>How is a <em>web map</em> different than a <em>digital map</em>?</div>
-<div>Digital: involves computer, but might not be accessible by the internet</div>
+<div><em>Digital</em>: involves computer, but might not be accessible by the internet</div>
+<div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em>maps, such as paper maps and atlases!</div>
 <div>History: how did web maps come to be?</div>
 <div>Digital maps: ArcGIS</div>
 <div>Web GIS is not user friendly </div>
@@ -100,33 +103,41 @@ window.onload = function() {
 <div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries</div>
 <div>Google Maps</div>
 <div>Google Maps really paved the way for online mapping, beginning in 2005</div>
-<div>Invention of the <em>tile</em></div>
+<div>Invention of the <em>tile</em> [image: tile]</div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
+<div>This kind of map is colloquially called a <em>slippy map</em></div>
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
-<div></div>
+<div>And all other slippy maps and slippy map software followed Google's lead</div>
 <div>Side note: XKCD</div>
 <div></div>
 <div>Tiles: the base of a base map</div>
 <div>[copy and paste Lyzi slides about tiles through pt 2 talking about feature layers]</div>
-<div></div>
+<div>https://mts0.google.com/vt/lyrs=m@245167685&hl=en&src=app&x=1310&y=3166&z=13&s=<br>https://a.tiles.mapbox.com/v3/financialtimes.map-w7l4lfi8/13/1310/3166.png<br>http://d.tile.stamen.com/watercolor/13/1310/3166.jpg</div>
 <div>Content layers</div>
 <div>point, polygon, line</div>
 <div>interactivity: </div>
 <div>There’s a limit to how much data you can have in your  content layer, because it will take more time to load. Above a certain size, vectors actually become too much data to load at a certain speed.</div>
+<div>Filetypes: GIS uses <em>shapefiles</em>, but web maps prefer <em>KML</em>, or more recently, <em>GeoJSON</em></div>
 <div>Content layers could also be made from transparent tiles</div>
-<div></div>
 <div>3 exceptions to the simplified story!</div>
-<div>Tiles are always rasters <em>EXCEPT</em> for vector tiles</div>
+<div>Exception #1: Tiles are always rasters <em>EXCEPT</em> when they're not!</div>
+<div>vector tiles! What are they?</div>
 <div>vector tiles: they are an alternative to a database that makes raster tiles. Still smush into PNG</div>
 <div>“what is difference b/t raster and vector tiles?” // put questions into the presentation.</div>
 <div>Raster: ask for data to fit into tile</div>
 <div>Vector: already have vector data sliced up in the way that I will make raster tiles</div>
 <div>So someone has to go through and chop up that data, like MapBox</div>
-<div>Can’t interact with features on a raster. BUT UTF Grid (mapbox invention).</div>
-<div><em>D3</em> does not exist in the world of tiles (BUT can’t make road map in D3) BUT can do things that are clumsy in slippy maps (chloropleth map)</div>
-<div></div>
+<div>Exception #2: Can’t interact with features on a raster. BUT <a href="https://www.mapbox.com/developers/utfgrid/">UTFGrid</a> (mapbox invention) makes it possible.</div>
+<div style="color: black"><img src="images/utfgrid.png">UTFGrid is an invisble tile layer made up of arbitrary letters which are indexes into the clickable data</div>
+<div>Exception #3: <a href="http://d3js.org">D3</a> does not exist in the world of tiles</div>
+<div>you can’t easily make road map in D3 <em>BUT</em> can do things that are clumsy in slippy maps like choropleth maps, or different map projections</div>
+<div>D3</div>
+<div>IS</div>
+<div>IN</div>
+<div>SANE</div>
+<div>[include images from the D3 gallery to show off D3]</div>
+<div>Very powerful, but steep learning curve</div>
 <div>Where do I start?</div>
-<div></div>
 <div>I want to make…</div>
 <div>// http://mapmeld.github.io/whichmapdoiuse/# </div>
 <div></div>
@@ -135,9 +146,7 @@ window.onload = function() {
 <div></div>
 <div>Yes</div>
 <div>TileMill</div>
-<div></div>
-<div>Awesome tiles!</div>
-<div>* TileMill</div>
+<div>More: http://maptime.github.io/geolearning.html</div>
 
 <div>Thanks to:</div>
 <div><a href="https://github.com/lyzidiamond">Lyzi Diamond</a></div>
