More minor additions

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ window.onload = function() {
 <div>Tiles: the base of a base map</div>
 <div>[copy and paste Lyzi slides about tiles through pt 2 talking about feature layers]</div>
 <div>https://mts0.google.com/vt/lyrs=m@245167685&hl=en&src=app&x=1310&y=3166&z=13&s=<br>https://a.tiles.mapbox.com/v3/financialtimes.map-w7l4lfi8/13/1310/3166.png<br>http://d.tile.stamen.com/watercolor/13/1310/3166.jpg</div>
+<div>Tiles are "rendered" in advance (usually) then stored in a cache</div>
+<div>Include diagram of the database, the cache, the rendering process (usually <a href="http://mapnik.org">mapnik</a>)</div>
 <div>Content layers</div>
 <div>point, polygon, line</div>
 <div>interactivity: </div>
@@ -137,15 +139,21 @@ window.onload = function() {
 <div>SANE</div>
 <div>[include images from the D3 gallery to show off D3]</div>
 <div>Very powerful, but steep learning curve</div>
-<div>Where do I start?</div>
+<div>So.<br>Where do I start?</div>
 <div>I want to make…</div>
-<div>// http://mapmeld.github.io/whichmapdoiuse/# </div>
-<div></div>
+<div>[Do we want to make something like this?]// http://mapmeld.github.io/whichmapdoiuse/# </div>
 <div>Do I need my own tiles?</div>
 <div>No:</div>
 <div></div>
 <div>Yes</div>
 <div>TileMill</div>
+<div>...then host your own tiles, or host them on MapBox</div>
+<div>Do I need a content layer?</div>
+<div>No</div>
+<div>Put all your data into the tiles. Possibly use UTFGrid</div>
+<div>Yes</div>
+<div>Convert a Shapefile to GeoJSON or write your own GeoJSON</div>
+<div>Also mention CartoDB</div>
 <div>More: http://maptime.github.io/geolearning.html</div>
 
 <div>Thanks to:</div>
