--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@ window.onload = function() {
 <div>Do I need my own tiles?</div>
 <div>No:</div>
 <div>Use these! [list of examples, OSM styles, CloudMade, Stamen, MapBox, MapQuest]</div>
-<div>Yes</div>
+<div>Yes:</div>
 <div>TileMill</div>
 <div>Will generate a pile of tiles [screenshot]. Saves them as <a href="https://www.mapbox.com/developers/mbtiles/">MBTiles</a>.</div>
 <div>Open up this file with <a href="https://github.com/mapbox/mbutil">mbutil</a>, and look at all the files! Or...</div>
-<div>Serve the tiles by running your own tile server. <a href="https://github.com/klokantech/tileserver-php/">TileServer.php</a>, or <a href="http://tilestache.org">TileStache</a>, or <a href="http://tilecache.org">TileCache</a>, or <a href="https://github.com/mapbox/tilestream">TileStream</a>, or <a href="https://github.com/chelm/mbtiles-server">mbtiles-server</a>, or <a href=http://wiki.openstreetmap.org/wiki/Mod_tile">mod_tile</a></div>
+<div>Serve the tiles by running your own tile server. For example: <a href="https://github.com/klokantech/tileserver-php/">TileServer.php</a> / <a href="http://tilestache.org">TileStache</a> / <a href="http://tilecache.org">TileCache</a> / <a href="https://github.com/mapbox/tilestream">TileStream</a> / <a href="https://github.com/chelm/mbtiles-server">mbtiles-server</a> / <a href=http://wiki.openstreetmap.org/wiki/Mod_tile">mod_tile</a></div>
 <div>...or host them on MapBox</div>
 <div>Do I need a content layer?</div>
-<div>No</div>
-<div>Put all your data into the tiles. Possibly use UTFGrid</div>
-<div>Yes</div>
-<div>Convert a Shapefile to GeoJSON or write your own GeoJSON</div>
+<div>No:</div>
+<div>Put all your data into the tiles. Possibly use UTFGrid for interactivity</div>
+<div>Yes:</div>
+<div>Convert a Shapefile to GeoJSON with <a href="http://ogre.adc4gis.com/">OGRE</a> or write your own GeoJSON with <a href="http://geojson.io">geojson.io</a></div>
 <div>Also mention CartoDB</div>
 <div>More: http://maptime.github.io/geolearning.html</div>
 
