Add link to Jason Davies' D3 projection transitions

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ window.onload = function() {
 <div>IN</div>
 <div>SANE</div>
 <div>[include images from the D3 gallery to show off D3]</div>
+<div><a href="http://www.jasondavies.com/maps/transition/">dynamic reprojection in the browser!</a></div>
 <div>Very powerful, but steep learning curve</div>
 <div>So.<br>Where do I start?</div>
 <div>I want to make…</div>
