--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.onload = function() {
 </script></head><body>
 <div>Anatomy of a <em>Web Map</em></div>
 <div>By <a href="http://stamen.com/studio/alan">Alan McConchie</a> :) and <a href="http://stamen.com/studio/beth">Beth Schechter</a> :D</div>
-<div>Housekeeping!<br>You can follow along here: <a href="http://sta.mn/???">sta.mn/???</a>. Links are in blue boxes, green is just emphasis. You can comment and edit on <a href="https://github.com/maptime/anatomy-of-a-web-map/">github!</a></div>
+<div>Housekeeping!<br>You can follow along here: <a href="http://sta.mn/qhg">sta.mn/qhg</a>. Links are in blue boxes, <em>green</em> is just emphasis. You can comment and edit on <a href="https://github.com/maptime/anatomy-of-a-web-map/">github!</a></div>
 <div>[image: gray's anatomy? Anatomy of a single-celled organism?]</div>
 <div>We will be talking about the simplest, most generic web map. But we will note exceptions</div>
 <div>We'll be showing you a complete <em>open source</em> stack.</div>
@@ -119,7 +119,7 @@ window.onload = function() {
 <div>And don't forget: <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps API</a> / <a href="http://www.microsoft.com/maps/choose-your-bing-maps-API.aspx">Bing Maps API</a> / <a href="http://developer.here.com/web/guest/javascript-apis">Nokia HERE Maps API</a> / <a href="https://developers.arcgis.com/en/javascript/">ESRI ArcGIS API</a></div>
 <div>What does the javascript library do? Grabs the tiles, adds content layer, handles interaction.</div>
 <div>Tiles: the base of a base map</div>
-<div>[is this where we talk about rasters vs vectores, and points/lines/polygons?]</div>
+<div>[is this where we talk about rasters vs vectors, and points/lines/polygons?]</div>
 <div>[copy and paste Lyzi slides about tiles through pt 2 talking about feature layers]</div>
 <div>https://mts0.google.com/vt/lyrs=m@245167685&hl=en&src=app&x=1310&y=3166&z=13&s=<br>https://a.tiles.mapbox.com/v3/financialtimes.map-w7l4lfi8/13/1310/3166.png<br>http://d.tile.stamen.com/watercolor/13/1310/3166.jpg</div>
 <div>Tiles are <em>rendered</em> in advance (usually) then stored in a cache</div>
