Add tile images

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ window.onload = function() {
 <div>Mapquest [screenshot]</div>
 <div>Problem: slow to load</div>
 <div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries</div>
-<div>Google Maps</div>
-<div>Google Maps really paved the way for online mapping, beginning in 2005</div>
-<div>Invention of the <em>tile</em> [image: tile]</div>
+<div>Google Maps really paved the way for online mapping, beginning in 2005 [Image of original Google Maps]</div>
+<div>Invention of the <em>tile</em> <img width="256px" src="images/tiles/toner.png"></div>
+<div>All web maps use the same tile boundaries:<img width="256px" src="images/tiles.gif"></div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
 <div>This kind of map is colloquially called a <em>slippy map</em></div>
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
