Add code screenshot

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ window.onload = function() {
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
 <div>And all other slippy maps and slippy map software followed Google's lead</div>
 <div>Now we're ready to show you the whole anatomy!</div>
+<div><img src="images/leaflet_code.png"></div>
 <div>[diagram] HTML page, with a JavaScript map library, which loads tiles from a server, and a content layer from another server</div>
 <div>The javascript: we recommend <a href="http://leafletjs.com">Leaflet</a>, although there are others: <a href="http://openlayers.org">OpenLayers</a> / <a href="http://modestmaps.com">Modest Maps</a> / <a href="http://polymaps.org">Polymaps</a></div>
 <div>And don't forget: <a href="https://developers.google.com/maps/documentation/javascript/">Google Maps API</a> / <a href="http://www.microsoft.com/maps/choose-your-bing-maps-API.aspx">Bing Maps API</a> / <a href="http://developer.here.com/web/guest/javascript-apis">Nokia HERE Maps API</a> / <a href="https://developers.arcgis.com/en/javascript/">ESRI ArcGIS API</a></div>
