ok for real corrrect anatomy images

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ window.onload = function() {
 <div>Anatomy of a <em>Web Map</em></div>
 <div>By <a href="http://stamen.com/studio/alan">Alan McConchie</a> :) and <a href="http://stamen.com/studio/beth">Beth Schechter</a> :D</div>
 <div>Housekeeping!<br>You can follow along here: <a href="http://sta.mn/qhg">sta.mn/qhg</a>. Links are in blue boxes, <em>green</em> is just emphasis. You can comment and edit on <a href="https://github.com/maptime/anatomy-of-a-web-map/">github!</a></div>
-<div><img src="images/anatomy1.png"></div>
-<div><img src="images/anatomy2.png"></div>
-<div><img src="images/anatomy3.png"></div>
-<div><img src="images/anatomy4.png"></div>
+<div><img src="images/0-anatomy-dude/anatomy1.png"></div>
+<div><img src="images/0-anatomy-dude/anatomy2.png"></div>
+<div><img src="images/0-anatomy-dude/anatomy3.png"></div>
+<div><img src="images/0-anatomy-dude/anatomy4.png"></div>
 <div>We will be talking about the simplest, most generic web map. But we will note exceptions</div>
 <div>This will be a complete <em>open source</em> stack.</div>
 <div>We'll talk a lot about <em>Google</em>, but we're showing you a <em>100% Google-free stack</em></div>
