--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ window.onload = function() {
 <div>We'll talk a lot about <em>Google</em>, but we're showing you a <em>100% Google-free stack</em></div>
 <div>[code: show the simplest possible leaflet map]</div>
 <div>What is a web map?</div>
-<div>A web map is...</div>
+<div>To answer that question, maybe it's more helpful to ask,</div>
 <div>How is a <em>web map</em> different than a <em>digital map</em>?</div>
-<div><em>Digital</em>: involves computer, but might not be accessible by the internet</div>
+<div><em>Digital</em>: involves a computer, but might not be accessible by the internet.</div>
 <div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em> maps, such as paper maps and atlases!</div>
 <div>We're talking about web maps that you view in a browser. Making maps for mobile devices can be similar, but we're not talking about that today</div>
 <div>We're also not talking about <em>digital globes</em> like <em>Google Earth</em></div>
