--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ window.onload = function() {
 <div>We'll talk a lot about <em>Google</em>, but we're going to show you a <em>100% Google-free stack</em></div>
 <div>But first, what does <em>anatomy</em> have to do with a web map?</div>
 <div>Well,</div>
-<div>both bodies and web maps have components and systems that <em>interact and intertwine.<em></div>
+<div>Both bodies and web maps have components and systems that <em>interact and intertwine.</em></div>
 <div><img src="images/0-anatomy-dude/anatomy1.png"></div>
 <div><img src="images/0-anatomy-dude/anatomy2.png"></div>
 <div><img src="images/0-anatomy-dude/anatomy3.png"></div>
