green go away. and add google map

--- a/index.html
+++ b/index.html
@@ -100,15 +100,19 @@ window.onload = function() {
 <div><img src="images/0-anatomy-dude/anatomy3.png"></div>
 <div><img src="images/0-anatomy-dude/anatomy4.png"></div>
 <div>Instead of cells, maps have <em>data.</em></div>
-<div>Instead of circulatory and digestive systems, maps have <em>styles and tiles and servers.</em><br>oh my!</div>
-<div>[code: show the simplest possible leaflet map]</div>
+<div>Instead of circulatory and digestive systems, web maps have <em>styles and tiles and servers.</em><br>oh my!</div>
+<div>So,</div>
 <div>What is a web map?</div>
 <div>To answer that question, maybe it's more helpful to ask,</div>
 <div>How is a <em>web map</em> different than a <em>digital map</em>?</div>
 <div><em>Digital</em>: involves a computer, but might not be accessible by the internet.</div>
 <div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em> maps, such as paper maps and atlases!</div>
-<div>We're talking about web maps that you view in a browser. Making maps for mobile devices can be similar, but we're not talking about that today</div>
-<div>We're also not talking about <em>digital globes</em> like <em>Google Earth</em></div>
+<div>We're talking about web maps that you view in a browser, like...</div>
+<div>example 1: <a href="https://www.google.com/maps/preview">Google Maps</a><img src="images/google-map.png"></div>
+<div>Making maps for mobile devices can be similar, but we're not talking about that today</div> 
+<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
+<div><em>ok ok</em></div>
+<div>but like, how did </div>
 <div>History: how did web maps come to be?</div>
 <div>Digital maps: ArcGIS [screenshot]</div>
 <div>Web GIS is not user friendly [screenshot]</div>
@@ -124,6 +128,7 @@ window.onload = function() {
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
 <div>And all other slippy maps and slippy map software followed Google's lead</div>
 <div>Now we're ready to show you the whole anatomy!</div>
+<div>[code: show the simplest possible leaflet map]</div>
 <div><img src="images/leaflet_code.png"></div>
 <div>[diagram] HTML page, with a JavaScript map library, which loads tiles from a server, and a content layer from another server</div>
 <div>The javascript: we recommend <a href="http://leafletjs.com">Leaflet</a>, although there are others: <a href="http://openlayers.org">OpenLayers</a> / <a href="http://modestmaps.com">Modest Maps</a> / <a href="http://polymaps.org">Polymaps</a></div>
