--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ window.onload = function() {
 <div><em>Digital</em>: involves a computer, but might not be accessible by the internet.</div>
 <div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em> maps, such as paper maps and atlases!</div>
 <div>We're talking about web maps that you view in a browser, like...</div>
-<div>example 1: <a href="https://www.google.com/maps/preview">Google Maps</a><img src="images/google-map.png"></div>
+<div>example 1: <a href="https://www.google.com/maps/preview">Google Maps</a><img height="500" src="images/google-map.png"></div>
 <div>Making maps for mobile devices can be similar, but we're not talking about that today</div> 
 <div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
 <div><em>ok ok</em></div>
