--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ window.onload = function() {
 <div>We're talking about web maps that you view in a browser, like...</div>
 <div>example 1: <a href="https://www.google.com/maps/preview">Google Maps</a><img src="images/google-map.png"></div>
 <div>Making maps for mobile devices can be similar, but we're not talking about that today</div> 
-<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
+<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em>[screenshot]</div>
 <div><em>ok ok</em></div>
 <div>but like, how did </div>
 <div>History: how did web maps come to be?</div>
@@ -159,15 +159,14 @@ window.onload = function() {
 <div style="color: black"><img src="images/utfgrid.png">UTFGrid is an invisble tile layer made up of arbitrary letters which are indexes into the clickable data</div>
 <div>Exception #3: <a href="http://d3js.org">D3</a> exists outside the world of tiles</div>
 <div>you can’t easily make road map in D3 <em>BUT</em> can do things that are clumsy in slippy maps like...</div>
-<div><img src="images/d3-examples/d3_choropleth.png">choropleth maps or...</div>
-<div>cartograms or... <a href="http://sta.mn/q99">sta.mn/q99</a></div>
-<div>different map projections (in the browser!) <a href="http://sta.mn/jfs">sta.mn/jfs</a></div>
-<div>D3</div>
-<div>IS</div>
-<div>IN</div>
-<div>SANE</div>
-<div>[include images from the D3 gallery to show off D3]</div>
-<div><a href="http://www.jasondavies.com/maps/transition/">dynamic reprojection in the browser!</a></div>
+<div style="color: black"><img src="images/d3-examples/d3_choropleth.png">choropleth maps or... <a href="http://sta.mn/jyx">sta.mn/jyx</a></div>
+<div style="color: black"><img src="images/d3-examples/d3_cartogram.png">cartograms or... <a href="http://sta.mn/q99">sta.mn/q99</a></div>
+<div style="color: black"><img src="images/d3-examples/projection_transitions2.png">different map projections (in the browser!) <a href="http://sta.mn/jfs">sta.mn/jfs</a></div>
+<div style="color: black"><img src="images/d3-examples/geo.png">D3</div>
+<div style="color: black"><img src="images/d3-examples/racial-divide.png">IS</div>
+<div style="color: black"><img src="images/d3-examples/topojson.png">IN</div>
+<div style="color: black"><img src="images/d3-examples/drought.png">SANE</div>
+<div>Find these examples and more in Kai Chang's <a href="http://exposedata.com/talk/d3-geo/">d3.geo presentation</a></div>
 <div>Very powerful, but steep learning curve</div>
 <div>So.<br>Where do I start?</div>
 <div>I want to make…</div>
