--- a/leaflet.html
+++ b/leaflet.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
     <style type="text/css">
-      #mapdiv { height: 600px; }
+      #mapdiv { height: 100%; }
     </style>
   </head>
   <body>
