--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@ window.onload = function() {
 <div>Problem: slow to load</div>
 <div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries</div>
 <div>Google Maps really paved the way for online mapping, beginning in 2005 [Image of original Google Maps]</div>
-<div>Invention of the <em>tile</em> <img width="256px" src="images/tiles/toner.png"></div>
-<div>All web maps use the same tile boundaries:<img width="256px" src="images/tiles.gif"></div>
+<div>Invention of the <em>tile</em> <img src="images/tiles/toner.jpg"></div>
+<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
 <div>This kind of map is colloquially called a <em>slippy map</em></div>
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
 <div>And all other slippy maps and slippy map software followed Google's lead</div>
 <div>Now we're ready to show you the whole anatomy!</div>
 <div>[code: show the simplest possible leaflet map]</div>
+<div><img src="images/leaflet-toner-snapshot-giant.png"><a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
 <div><img src="images/leaflet_code.png"></div>
 <div>[diagram] HTML page, with a JavaScript map library, which loads tiles from a server, and a content layer from another server</div>
 <div>The javascript: we recommend <a href="http://leafletjs.com">Leaflet</a>, although there are others: <a href="http://openlayers.org">OpenLayers</a> / <a href="http://modestmaps.com">Modest Maps</a> / <a href="http://polymaps.org">Polymaps</a></div>
