saving and committing in good practice

--- a/index.html
+++ b/index.html
@@ -108,15 +108,14 @@ window.onload = function() {
 <div><em>Digital</em>: involves a computer, but might not be accessible by the internet.</div>
 <div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em> maps, such as paper maps and atlases!</div>
 <div>We're talking about web maps that you view in a browser, like...</div>
-<div><img src="images/google-map.png"<a href="https://www.google.com/maps/preview">Google Maps</a>></div>
-<div><img src="images/osm.png"<a href="http://www.openstreetmap.org/">OpenStreetMap</a>></div>
-<div>Making maps for mobile devices can be similar, but we're not talking about that today</div> 
+<div><img src="images/google-map.png"><a href="https://www.google.com/maps/preview">GoogleMaps</a></div>
+<div><img src="images/osm.png"><a href="http://www.openstreetmap.org/">OpenStreetMap</a></div>
+<div>Making maps for mobile devices can be similar, but we're not talking about that today.</div> 
 <div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em>[screenshot]</div>
 <div><em>ok ok</em></div>
-<div>but like, how did </div>
-<div>History: how did web maps come to be?</div>
-<div>Digital maps: ArcGIS [screenshot]</div>
-<div>Web GIS is not user friendly [screenshot]</div>
+<div>but how about a little history:<br><em>How did web maps come to be?</em></div>
+<div>First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
+<div>Although useful, ArcGIS for the Web is not user friendly :( <img src="images/3-map-history/1-arcGIS.jpg"></div>
 <div>Also usually ugly</div>
 <div>Mapquest [screenshot]</div>
 <div>Problem: slow to load</div>
