--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ window.onload = function() {
 <div><img src="images/google-map.png"><a href="https://www.google.com/maps/preview">GoogleMaps</a></div>
 <div><img src="images/osm.png"><a href="http://www.openstreetmap.org/">OpenStreetMap</a></div>
 <div>Making maps for mobile devices can be similar, but we're not talking about that today.</div> 
-<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em>[screenshot]</div>
+<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em><img src="images/google-earth.jpg"></div>
 <div><em>ok ok</em></div>
 <div>but how about a little history:<br><em>How did web maps come to be?</em></div>
 <div>First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
