mapsdot, more code edits

--- a/index.html
+++ b/index.html
@@ -108,19 +108,26 @@ window.onload = function() {
 <div><em>Digital</em>: involves a computer, but might not be accessible by the internet.</div>
 <div>A <em>web map</em> is a kind of <em>digital map</em>. And both are obviously quite different from <em>analog</em> maps, such as paper maps and atlases!</div>
 <div>We're talking about web maps that you view in a browser, like...</div>
-<div><img src="images/google-map.png"><a href="https://www.google.com/maps/preview">GoogleMaps</a></div>
-<div><img src="images/osm.png"><a href="http://www.openstreetmap.org/">OpenStreetMap</a></div>
+<div><img src="images/osm.png"><a href="http://www.openstreetmap.org/">OpenStreetMap.org</a></div>
+<div><img src="images/google-map.png"><a href="https://www.google.com/maps/preview">maps.google.com</a></div>
+<div><img src="images/mapsdotstamen.png"><a href="http://maps.stamen.com">maps.stamen.com</a></div>
 <div>Making maps for mobile devices can be similar, but we're not talking about that today.</div> 
-<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em><img src="images/google-earth.jpg"></div>
+<div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
+<div><img src="images/google-earth.png"></div>
 <div><em>ok ok</em></div>
 <div>but how about a little history:<br><em>How did web maps come to be?</em></div>
 <div>First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
-<div>Although useful, ArcGIS for the Web is not user friendly :( <img src="images/3-map-history/1-arcGIS.jpg"></div>
-<div>Also usually ugly</div>
-<div>Mapquest [screenshot]</div>
-<div>Problem: slow to load</div>
-<div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries</div>
-<div>Google Maps really paved the way for online mapping, beginning in 2005 [Image of original Google Maps]</div>
+<div><img src="images/3-map-history/1-arcGIS.jpg"></div>
+<div>Although useful, ArcGIS for the Web is not user friendly :( </div>
+<div><em>Also usually ugly</em><br>(though the one we just showed was not too bad)</div>
+<div>In 1996, Mapquest launched its web service.</div>
+<div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> </div>
+<div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> ta da!</div>
+<div>Directions! Revolutionary!</div>
+<div>The problem: it was slow to load :(</div>
+<div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries.</div>
+<div>Google Maps really paved the way for online mapping, beginning in 2005.</div>
+<div><img src=" "></div>
 <div>Invention of the <em>tile</em> <img src="images/tiles/toner.jpg"></div>
 <div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
