--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ window.onload = function() {
 <div><img src="images/mapsdotstamen.png"><a href="http://maps.stamen.com">maps.stamen.com</a></div>
 <div>Making maps for mobile devices can be similar, but we're not talking about that today.</div> 
 <div>We're also not talking about <em>digital globes</em> like <em>Google Earth.</em></div>
-<div><img src="images/google-earth.png"></div>
+<div><img src="images/google-earth.png"> <a href="http://www.google.com/earth/">google.com/earth/</a></div>
 <div><em>ok ok</em></div>
 <div>but how about a little history:<br><em>How did web maps come to be?</em></div>
 <div>First, there were digital maps like <a href="http://www.esri.com/software/arcgis">ArcGIS</a>.</div>
@@ -122,12 +122,18 @@ window.onload = function() {
 <div><em>Also usually ugly</em><br>(though the one we just showed was not too bad)</div>
 <div>In 1996, Mapquest launched its web service.</div>
 <div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> </div>
-<div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> ta da!</div>
-<div>Directions! Revolutionary!</div>
+<div><img src="images/3-map-history/2-Ridgefield-CT-Mapquest-out.jpg"> <em>ta da!</em></div>
+<div>Directions! Online! Revolutionary!</div>
 <div>The problem: it was slow to load :(</div>
 <div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries.</div>
 <div>Google Maps really paved the way for online mapping, beginning in 2005.</div>
-<div><img src=" "></div>
+<div><img src="images/3-map-history/3-old-google-maps-1.JPG"></div>
+<div>Was it the interface?<br>The red marker?<br>The weather widget?</div>
+<div>No!</div>
+<div>It was the <em>tile.</em></div>
+<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
+<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
+
 <div>Invention of the <em>tile</em> <img src="images/tiles/toner.jpg"></div>
 <div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
