at line 142! woot!

--- a/index.html
+++ b/index.html
@@ -128,19 +128,18 @@ window.onload = function() {
 <div>MapQuest required a full page refresh to scroll or zoom, and was always aligned to tile boundaries.</div>
 <div>Google Maps really paved the way for online mapping, beginning in 2005.</div>
 <div><img src="images/3-map-history/3-old-google-maps-1.JPG"></div>
-<div>Was it the interface?<br>The red marker?<br>The weather widget?</div>
+<div><em>But what was the revolution?</em><br>Was it the interface?<br>The red marker?<br>The weather widget?</div>
 <div>No!</div>
-<div>It was the <em>tile.</em></div>
-<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
-<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
-
-<div>Invention of the <em>tile</em> <img src="images/tiles/toner.jpg"></div>
-<div>All web maps use the same tile boundaries:<img src="images/tiles.gif"></div>
+<div>It was the <em>tile. <img src="images/tiles/toner.jpg"></em></div>
+<div>Many tiles, same size:<img src="images/tiles.gif"></div>
+<div>All these little tiles load <em>way faster</em> than one big map.</div>
+<div><img src="images/tiles-loading.gif"></div>
 <div>Load the ones that are in your screen, then if the map is “smart,” it will pre-load tiles outside of the screen (top, bottom, left, right)</div>
 <div>This kind of map is colloquially called a <em>slippy map</em></div>
+<div><img src="images/slippy-map.gif"></div>
 <div>Google maps uses mercator projection, which is designed for sailors BUT it works well for flat maps</div>
 <div>And all other slippy maps and slippy map software followed Google's lead</div>
-<div>Now we're ready to show you the whole anatomy!</div>
+<div>Now we're ready to show you the whole <em>web map anatomy!</em></div>
 <div>[code: show the simplest possible leaflet map]</div>
 <div><img src="images/leaflet-toner-snapshot-giant.png"><a href="http://sta.mn/v5h">sta.mn/v5h</a></div>
 <div><img src="images/leaflet_code.png"></div>
